feat: complete Genomics AI interpretation pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Input files
+data/
+
+# Output files
+output/
+
+# Agentic
+/.agents
